# lab-detect

./: .gitignore  README.md  b2b.sh  detect_by_yolact.sh  detect_by_yolov5.py  merge_results.py  merge_truth_detect_bbox.py  pyproject.toml
sample/result/: bbox_detections.json  detections.json  mask_detections.json
src/: merge_results.py  merge_truth_detect_bbox.py
