[project]
name = "detect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "gitpython>=3.1.43",
    "matplotlib>=3.9.0",
    "opencv-python>=4.10.0.84",
    "pillow>=10.4.0",
    "psutil>=6.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.3",
    "scipy>=1.14.0",
    "thop>=0.1.1.post2209072238",
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "tqdm>=4.66.4",
    "ultralytics>=8.2.48",
    "numpy>=1.23.5",
    "pandas>=2.2.2",
    "seaborn>=0.13.2",
    "setuptools>=70.2.0",
    "wheel>=0.43.0",
    "pycocotools>=2.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/detect"]
